[metadata]
name = muon
author = Pablo Castellazzi
author-email = pablo.castellazzi@gmail.com
summary = Docker wrapper for testing Ansible roles
license = MIT
description-file = README.rst
home-page = https://github.com/pcastellazzi/muon/
requires-python = 2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
autodoc_tree_index_modules = 1
warnerrors = True

[entry_points]
console_scripts =
    muon = muon.commands:main

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
